force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>The Appointment object manages patient bookings and scheduling. It captures Contact (required patient link), Start Date Time, End Date Time, Status, Appointment Type, and Location, with separate Patient Notes and Internal Notes. Validation rules require the end time to follow the start. Commonly used for patient scheduling and tracking.</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>APT-{00000}</displayFormat>
        <label>Appointment Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_After_Start</fullName>
        <active>true</active>
        <errorConditionFormula><![CDATA[AND(NOT(ISBLANK(Start_Date_Time__c)), NOT(ISBLANK(End_Date_Time__c)), End_Date_Time__c <= Start_Date_Time__c)]]></errorConditionFormula>
        <errorMessage>End Date Time must be later than Start Date Time.</errorMessage>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
    </validationRules>
</CustomObject>