force-app/main/default/objects/Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <description>Identifies the clinical or administrative purpose of the appointment.</description>
    <inlineHelpText>Choose the type of service planned for this appointment.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Check-up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>