force-app/main/default/objects/Appointment__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <description>Records why an appointment was cancelled for follow-up and operational reporting.</description>
    <inlineHelpText>Describe why the appointment was cancelled when the status is Cancelled.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>