force-app/main/default/objects/Appointment__c/fields/Cancelled_At__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_At__c</fullName>
    <label>Cancelled At</label>
    <description>Records when the appointment was cancelled for audit and scheduling history.</description>
    <inlineHelpText>Enter the date and time when the appointment was cancelled.</inlineHelpText>
    <type>DateTime</type>
</CustomField>