force-app/main/default/objects/Appointment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Associates the appointment with the patient Contact who will receive care.</description>
    <inlineHelpText>Select the patient Contact for this appointment.</inlineHelpText>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>