force-app/main/default/objects/Appointment__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <description>Stores when the appointment ends so its duration and schedule can be managed.</description>
    <inlineHelpText>Enter an end date and time later than the appointment start.</inlineHelpText>
    <type>DateTime</type>
</CustomField>