force-app/main/default/objects/Appointment__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <description>Stores private clinical or operational notes for authorized internal staff.</description>
    <inlineHelpText>Enter staff-only notes; this field is not exposed to portal users.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>