force-app/main/default/objects/Appointment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <description>Records where the appointment will take place for patient and staff reference.</description>
    <inlineHelpText>Enter the clinic, room, or virtual location for the appointment.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>