force-app/main/default/objects/Appointment__c/fields/Patient_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Notes__c</fullName>
    <label>Patient Notes</label>
    <description>Stores appointment details or questions that are intended for the patient portal.</description>
    <inlineHelpText>Enter notes that are appropriate for the patient to read in the portal.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>