force-app/main/default/objects/Appointment__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <description>Stores when the appointment begins for scheduling and upcoming appointment queries.</description>
    <inlineHelpText>Enter the appointment start date and time in the patient's local time zone.</inlineHelpText>
    <type>DateTime</type>
</CustomField>